--- a/ListarProductoAngular/src/app/Components/Producto/producto.component.html
+++ b/ListarProductoAngular/src/app/Components/Producto/producto.component.html
@@ -4,6 +4,7 @@
     <div>
       <button  type="button" (click)="ListarProductos()" class="btn btn-danger">Recargar</button>
     </div>
+    <div class="table-responsive">
     <table class="table table-striped table-hover">
         <thead>
           <tr>
@@ -30,5 +31,5 @@
       </table>
       <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize" class="d-flex justify-content-center" (pageChange)="ActualizarProductos()">
       </ngb-pagination>
-
+    </div>
 </div>
