--- a/ListarProductoAngular/src/app/Components/Producto/producto.component.html
+++ b/ListarProductoAngular/src/app/Components/Producto/producto.component.html
@@ -12,7 +12,7 @@
             <th sortable=true scope="col">Nombre</th>
             <th scope="col">Descripcion</th>
             <th scope="col">Precio</th>
-            <th scope="col">Imagen 📥</th>
+            <th scope="col">Imagen⇩</th>
             <th scope="col">Eliminar</th>
           </tr>
         </thead>
